--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,11 @@ monitor_speed = 115200
 board_build.partitions = no_ota.csv
 ;upload_port = com9
 ;monitor_port = com9
-lib_deps = 
+lib_deps =
         gin66/FastAccelStepper @ ^0.23.2
         adafruit/Adafruit BusIO @ ^1.5.0
         adafruit/Adafruit GFX Library @ ^1.10.1
         adafruit/Adafruit SSD1306 @ ^2.4.0
         jchristensen/JC_Button @ ^2.1.2
+        https://github.com/tzapu/WiFiManager.git#v2.0.11-beta
+        bblanchon/ArduinoJson@^6.19.4
