more api + websocket support

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,5 +22,8 @@ lib_deps =
         bblanchon/ArduinoJson@^6.19.4
         fastled/FastLED@^3.5.0
         thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.3.0
+        ; FIXME using master for now because of this issue: https://github.com/me-no-dev/ESPAsyncWebServer/issues/1151
+        ; me-no-dev/ESP Async WebServer@^1.2.3
+        https://github.com/me-no-dev/ESPAsyncWebServer.git
         https://github.com/tzapu/WiFiManager.git#v2.0.11-beta
         https://github.com/theelims/StrokeEngine.git#v0.3.0
