--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/StrokeEngine"]
 	path = lib/StrokeEngine
-	url = https://github.com/901b7190/StrokeEngine
+	url = https://github.com/901b7190/StrokeEngine.git
